(about): fix image issues
shape-outside: circle() had to be ditched because it's not supported on firefox or ie and it looks bad when it's not supported. also, the mobile view of the image size has been fixed so it scales down.

--- a/Peterson Everybody/public_html/lsp.css
+++ b/Peterson Everybody/public_html/lsp.css
@@ -321,14 +321,10 @@ form {
 /*image styles*/
 .full-width-img {
     width: 250px;
-    height: 250px;
     min-width: 150px;
     min-height: 150px;
     float: left;
     margin-right: 2rem;
-    border-radius: 50%;
-    -webkit-shape-outside: circle();
-    shape-outside: circle();
     margin-top: 20px;
 }
 .half-width-img {
@@ -542,6 +538,7 @@ form {
 
 @media (max-width: 750px) {
 
+  
 	.panel.book-side {
 		padding-left: 0px;
 		min-height: 275px;
@@ -586,6 +583,9 @@ form {
 
 @media (max-width: 750px) {
 
+  .full-width-img {
+    width: 15%;
+  }
 	.panel.book-side {
 		padding-left: 0px;
 		min-height: 275px;
